[package]
name = "northstar"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-account.workspace = true
solana-clock.workspace = true
solana-fee-structure.workspace = true
solana-genesis-config.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-pubkey = { workspace = true, default-features = false }
solana-tls-utils.workspace = true
solana-rpc = { workspace = true, features = ["agave-unstable-api"] }
solana-runtime = { workspace = true, features = ["agave-unstable-api"] }
solana-sdk-ids.workspace = true
solana-signer.workspace = true
solana-system-interface.workspace = true
solana-send-transaction-service.workspace = true
solana-svm-timings.workspace = true
solana-svm.workspace = true
solana-transaction.workspace = true
solana-transaction-status.workspace = true
solana-ledger.workspace = true
solana-loader-v3-interface.workspace = true
solana-gossip.workspace = true
solana-validator-exit.workspace = true
solana-rpc-client-types.workspace = true
solana-time-utils.workspace = true
solana-net-utils.workspace = true
solana-streamer.workspace = true
solana-perf.workspace = true

crossbeam-channel.workspace = true
stream-cancel.workspace = true
tokio-util.workspace = true

agave-logger.workspace = true
agave-reserved-account-keys.workspace = true

bincode.workspace = true
log.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

northstar-portal.workspace = true

borsh = { workspace = true }

[dev-dependencies]
agave-snapshots.workspace = true
solana-address-lookup-table-interface.workspace = true
solana-compute-budget-interface.workspace = true
solana-rent.workspace = true
solana-rpc-client.workspace = true
serde_json = { workspace = true }
solana-ledger = { workspace = true, features = ["agave-unstable-api"] }
solana-runtime = { workspace = true, features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-instruction = { workspace = true }
solana-transaction-context.workspace = true
