[workspace]
members = [
    "northstar-anchor",
    "northstar-anchor-macros",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mirrorworld-universe/northstar"

[workspace.dependencies]
anchor-lang = "0.31.1"
northstar-anchor-macros = { path = "northstar-anchor-macros" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
