[package]
name = "northstar-portal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = "0.9"
pinocchio-system = "0.4"
pinocchio-log = "0.5"
pinocchio-pubkey = "0.3"
borsh = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk-ids = { workspace = true }
tokio = { workspace = true, features = ["full"] }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { workspace = true }
solana-keypair = { workspace = true }
solana-account = { workspace = true }
solana-system-interface = { workspace = true }
solana-hash = { workspace = true }

[lints.rust]
unexpected_cfgs = "allow"
